Fixed layout issue

--- a/projects-styles.css
+++ b/projects-styles.css
@@ -113,7 +113,7 @@ border-radius: 5px;
     background-color: white;
     color: black;
     margin: 10% auto;
-    padding: 30%;
+    padding: 30px;
     width: 50%;
     border-radius: 15px;
     position: relative;
